<resources>
    <string name="app_name">Simple Gallery</string>
    <string name="app_launcher_name">Gallery</string>
    <string name="edit">Edit</string>
    <string name="open_camera">Open camera</string>
    <string name="hidden">(hidden)</string>
    <string name="excluded">(excluded)</string>
    <string name="pin_folder">Pin folder</string>
    <string name="unpin_folder">Unpin folder</string>
    <string name="pin_to_the_top">Pin to the top</string>
    <string name="all_folders">All folders</string>
    <string name="folder_view">Switch to folder view</string>
    <string name="other_folder">Other folder</string>
    <string name="change_cover_image">Change cover image</string>
    <string name="select_photo">Select photo</string>
    <string name="volume">Volume</string>
    <string name="brightness">Brightness</string>
    <string name="change_orientation">Change orientation</string>
    <string name="force_portrait">Force portrait</string>
    <string name="force_landscape">Force landscape</string>
    <string name="use_default_orientation">Use default orientation</string>
    <string name="fix_date_taken">Fix Date Taken value</string>
    <string name="fixing">Fixing…</string>
    <string name="dates_fixed_successfully">Dates fixed successfully</string>
    <string name="no_date_takens_found">No Date Taken values have been found</string>
    <string name="share_resized">Share a resized version</string>
    <string name="upgraded_from_free">Hey,\n\nseems like you upgraded from the old free app. You can now uninstall the old version, which has an \'Upgrade to Pro\' button at the top of the app settings.\n\nYou will only have the Recycle bin items deleted, favorite items unmarked and you will also have to reset your app settings.\n\nThanks!</string>
    <string name="switch_to_file_search">Switch to file search across all visible folders</string>
    <string name="filter_media">Filter media</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="gifs">GIFs</string>
    <string name="raw_images">RAW images</string>
    <string name="svgs">SVGs</string>
    <string name="portraits">Portraits</string>
    <string name="no_media_with_filters">No media files have been found with the selected filters.</string>
    <string name="change_filters_underlined"><u>Change filters</u></string>
    <string name="remove_all">Remove all</string>
    <string name="hidden_folders">Hidden folders</string>
    <string name="manage_hidden_folders">Manage hidden folders</string>
    <string name="hidden_folders_description">You can hide folders.\n\Select images to hide on \"All\" \n page, and then click \"Hide\".</string>
    <string name="pick_image">Select an image</string>
    <string name="resize">Resize</string>
    <string name="resize_and_save">Resize selection and save</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="keep_aspect_ratio">Keep aspect ratio</string>
    <string name="invalid_values">Please enter a valid resolution</string>
    <string name="editor">Editor</string>
    <string name="rotate">Rotate</string>
    <string name="invalid_image_path">Invalid image path</string>
    <string name="image_editing_failed">Image editing failed</string>
    <string name="image_editing_cancelled">Image editing cancelled</string>
    <string name="file_edited_successfully">File edited successfully</string>
    <string name="edit_image_with">Edit image with:</string>
    <string name="no_editor_found">No image editor found</string>
    <string name="unknown_file_location">Unknown file location</string>
    <string name="error_saving_file">Could not overwrite the source file</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="rotate_one_eighty">Rotate by 180º</string>
    <string name="flip">Flip</string>
    <string name="primary_crop_draw">Draw</string>
    <string name="free_aspect_ratio">Free</string>
    <string name="other_aspect_ratio">Other</string>
    <string name="set_wallpaper">Set wallpaper</string>
    <string name="set_as_wallpaper">Set as Wallpaper</string>
    <string name="set_as_wallpaper_failed">Setting as Wallpaper failed</string>
    <string name="set_as_wallpaper_with">Set as wallpaper with:</string>
    <string name="setting_wallpaper">Setting wallpaper&#8230;</string>
    <string name="wallpaper_set_successfully">Wallpaper set successfully</string>
    <string name="portrait_aspect_ratio">Portrait aspect ratio</string>
    <string name="landscape_aspect_ratio">Landscape aspect ratio</string>
    <string name="home_screen">Home screen</string>
    <string name="lock_screen">Lock screen</string>
    <string name="home_and_lock_screen">Home and lock screen</string>
    <string name="slideshow">Slideshow</string>
    <string name="interval">Interval (seconds):</string>
    <string name="include_photos">Include photos</string>
    <string name="include_videos">Include videos</string>
    <string name="include_gifs">Include GIFs</string>
    <string name="random_order">Random order</string>
    <string name="move_backwards">Move backwards</string>
    <string name="loop_slideshow">Loop slideshow</string>
    <string name="animation">Animation</string>
    <string name="no_animation">None</string>
    <string name="fade">Fade</string>
    <string name="slide">Slide</string>
    <string name="slideshow_ended">The slideshow ended</string>
    <string name="no_media_for_slideshow">No media for the slideshow have been found</string>
    <string name="change_view_type">Change view type</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="group_direct_subfolders">Group direct subfolders</string>
    <string name="group_by">Group by</string>
    <string name="do_not_group_files">Do not group files</string>
    <string name="by_folder">Folder</string>
    <string name="by_last_modified">Last modified</string>
    <string name="by_last_modified_daily">Last modified (daily)</string>
    <string name="by_last_modified_monthly">Last modified (monthly)</string>
    <string name="by_date_taken">Date taken</string>
    <string name="by_date_taken_daily">Date taken (daily)</string>
    <string name="by_date_taken_monthly">Date taken (monthly)</string>
    <string name="by_file_type">File type</string>
    <string name="by_extension">Extension</string>
    <string name="grouping_and_sorting">Please note that grouping and sorting are 2 independent fields</string>
    <string name="folder_on_widget">Folder shown on the widget:</string>
    <string name="show_folder_name">Show folder name</string>
    <string name="autoplay_videos">Play videos automatically</string>
    <string name="remember_last_video_position">Remember last video playback position</string>
    <string name="toggle_filename">Toggle filename visibility</string>
    <string name="loop_videos">Loop videos</string>
    <string name="animate_gifs">Animate GIFs at thumbnails</string>
    <string name="max_brightness">Max brightness when viewing fullscreen media</string>
    <string name="crop_thumbnails">Crop thumbnails into squares</string>
    <string name="show_thumbnail_video_duration">Show video durations</string>
    <string name="screen_rotation_by">Rotate fullscreen media by</string>
    <string name="screen_rotation_system_setting">System setting</string>
    <string name="screen_rotation_device_rotation">Device rotation</string>
    <string name="screen_rotation_aspect_ratio">Aspect ratio</string>
    <string name="black_background_at_fullscreen">Black background at fullscreen media</string>
    <string name="scroll_thumbnails_horizontally">Scroll thumbnails horizontally</string>
    <string name="hide_system_ui_at_fullscreen">Automatically hide system UI at fullscreen media</string>
    <string name="delete_empty_folders">Delete empty folders after deleting their content</string>
    <string name="allow_photo_gestures">Allow controlling photo brightness with vertical gestures</string>
    <string name="allow_video_gestures">Allow controlling video volume and brightness with vertical gestures</string>
    <string name="show_media_count">Show folder media count on the main view</string>
    <string name="show_extended_details">Show extended details over fullscreen media</string>
    <string name="manage_extended_details">Manage extended details</string>
    <string name="one_finger_zoom">Allow one finger zoom at fullscreen media</string>
    <string name="allow_instant_change">Allow instantly changing media by clicking on screen sides</string>
    <string name="allow_deep_zooming_images">Allow deep zooming images</string>
    <string name="hide_extended_details">Hide extended details when status bar is hidden</string>
    <string name="show_at_bottom">Show some action buttons at the bottom of the screen</string>
    <string name="show_recycle_bin">Show the Recycle Bin at the folders screen</string>
    <string name="deep_zoomable_images">Deep zoomable images</string>
    <string name="show_highest_quality">Show images in the highest possible quality</string>
    <string name="show_recycle_bin_last">Show the Recycle Bin as the last item on the main screen</string>
    <string name="allow_down_gesture">Allow closing the fullscreen view with a down gesture</string>
    <string name="allow_one_to_one_zoom">Allow 1:1 zooming in with two double taps</string>
    <string name="open_videos_on_separate_screen">Always open videos on a separate screen with new horizontal gestures</string>
    <string name="show_notch">Show a notch if available</string>
    <string name="allow_rotating_gestures">Allow rotating images with gestures</string>
    <string name="file_loading_priority">File loading priority</string>
    <string name="show_image_file_types">Show image file types</string>
    <string name="allow_zooming_videos">Allow zooming videos with double tapping them</string>
    <string name="thumbnails">Thumbnails</string>
    <string name="fullscreen_media">Fullscreen media</string>
    <string name="extended_details">Extended details</string>
    <string name="bottom_actions">Bottom actions</string>
    <string name="manage_bottom_actions">Manage visible bottom actions</string>
    <string name="toggle_favorite">Toggle favorite</string>
    <string name="toggle_file_visibility">Toggle file visibility</string>
    <string name="pesdk_transform_button_freeCrop">Custom</string>
    <string name="pesdk_transform_button_resetCrop">Reset</string>
    <string name="pesdk_transform_button_squareCrop">Square</string>
    <string name="pesdk_transform_title_name">Transform</string>
    <string name="pesdk_filter_title_name">Filter</string>
    <string name="pesdk_filter_asset_none">None</string>
    <string name="pesdk_adjustments_title_name">Adjust</string>
    <string name="pesdk_adjustments_button_shadowTool">Shadows</string>
    <string name="pesdk_adjustments_button_exposureTool">Exposure</string>
    <string name="crop">Crop</string>
    <string name="adjust">Adjust</string>
    <string name="more">More</string>
    <string name="more_draw">Draw</string>
    <string name="doodle">Doodle</string>
    <string name="doodle_bar_paint_brush">Paintbrush</string>
    <string name="doodle_bar_rect">Rect</string>
    <string name="doodle_bar_circle">Circle</string>
    <string name="doodle_bar_arrow">Arrow</string>
    <string name="doodle_bar_mosaic">Mosaic</string>
    <string name="doodle_remove">Delete</string>
    <string name="doodle_top">Top</string>
    <string name="doodle_bottom">Bottom</string>
    <string name="transfer_sms">Message</string>
    <string name="transfer_note">Note</string>
    <string name="transfer_bluetooth">Bluetooth</string>
    <string name="select_transfer_method">Select the transmission method.</string>
</resources>