<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center_horizontal"
    >

    <TextView
        android:id="@+id/btn_doodle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:text="@string/doodle"
        android:textColor="@drawable/text_selector"
        android:drawableTop="@drawable/baseline_gesture_24"/>

    <TextView
        android:id="@+id/btn_mosaic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:text="@string/doodle_bar_mosaic"
        android:textColor="@drawable/text_selector"
        android:drawableTop="@drawable/baseline_grain_24"/>

    <TextView
        android:id="@+id/btn_draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:text="@string/more_draw"
        android:textColor="@drawable/text_selector"
        android:drawableTop="@drawable/baseline_brush_24"/>

</LinearLayout>
