<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_editor_primary_actions_wrapper"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_actions_height"
    android:layout_alignParentBottom="true">

    <TextView
        android:id="@+id/bottom_primary_crop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crop"
        android:textSize="@dimen/small_text_size"
        android:drawableTop="@drawable/ic_edit_crop_vector"
        android:textColor="@drawable/text_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bottom_primary_filter"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/bottom_primary_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:textSize="@dimen/small_text_size"
        android:drawableTop="@drawable/ic_edit_filter_vector"
        android:textColor="@drawable/text_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bottom_primary_adjust"
        app:layout_constraintStart_toEndOf="@id/bottom_primary_crop"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/bottom_primary_adjust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adjust"
        android:textSize="@dimen/small_text_size"
        android:drawableTop="@drawable/baseline_tune_24"
        android:textColor="@drawable/text_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bottom_primary_more"
        app:layout_constraintStart_toEndOf="@+id/bottom_primary_filter"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/bottom_primary_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more"
        android:textSize="@dimen/small_text_size"
        android:drawableTop="@drawable/outline_widgets_24"
        android:textColor="@drawable/text_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bottom_primary_adjust"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
