<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sheet_delete"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_rounded_corner"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bottom_dialog_top_margin"
        android:gravity="center_horizontal"
        android:text="@string/select_transfer_method"
        android:textSize="@dimen/bottom_dialog_header_text_size"
        android:textColor="@color/common_text_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:paddingStart="@dimen/bottom_bar_padding"
        android:paddingEnd="@dimen/bottom_bar_padding">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/message_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:gravity="center"
                android:orientation="vertical"
                android:background="?attr/selectableItemBackgroundBorderless">
                <ImageView
                    android:layout_width="@dimen/bottom_sheet_icon_size"
                    android:layout_height="@dimen/bottom_sheet_icon_size"
                    android:src="@drawable/ic_baseline_message_24"
                    app:tint="@color/bottomSheetColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/bottom_item_text"
                    android:text="@string/transfer_sms"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/note_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/bottom_sheet_icon_size"
                    android:layout_height="@dimen/bottom_sheet_icon_size"
                    android:src="@drawable/ic_outline_event_note_24"
                    app:tint="@color/bottomSheetColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/bottom_item_text"
                    android:text="@string/transfer_note"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/bluetooth_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/bottom_sheet_icon_size"
                    android:layout_height="@dimen/bottom_sheet_icon_size"
                    android:src="@drawable/ic_outline_bluetooth_24"
                    app:tint="@color/bottomSheetColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/bottom_item_text"
                    android:text="@string/transfer_bluetooth"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
